main/default/objects/pharos__Trace_Schedule__c/pharos__Trace_Schedule__c.object-meta.xml
<CustomObject>
    <label>Trace Schedule</label>
    <nameField>
        <label>Trace Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trace Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>