main/default/objects/pharos__Trace_Schedule__c/fields/pharos__Description__c.field-meta.xml
<CustomField>
    <fullName>pharos__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>