main/default/objects/pharos__Trace_Schedule__c/fields/pharos__Trace_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pharos__Trace_End_Date__c</fullName>
    <label>Trace End Date</label>
    <type>DateTime</type>
</CustomField>