main/default/objects/pharos__Trace_Schedule__c/listViews/pharos__All.listView-meta.xml
<ListView>
    <fullName>pharos__All</fullName>
    <columns>NAME</columns>
    <columns>pharos__Description__c</columns>
    <columns>pharos__Issue__c</columns>
    <columns>pharos__Status__c</columns>
    <columns>pharos__Trace_Start_Date__c</columns>
    <columns>pharos__Trace_End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>